--- a/package.json
+++ b/package.json
@@ -60,6 +60,11 @@
   "devDependencies": {
     "babel-core": "6.7.7",
     "babel-preset-es2015": "6.6.0",
-    "gulp-task-listing": "1.0.1"
+    "gulp-task-listing": "1.0.1",
+    "karma": "0.13.22",
+    "karma-chrome-launcher": "1.0.1",
+    "karma-mocha": "1.0.1",
+    "karma-phantomjs-launcher": "1.0.0",
+    "karma-typescript-preprocessor": "0.2.0"
   }
 }
